Fixing alignment for title

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -3,7 +3,7 @@
 .header {
   box-sizing: border-box;
   min-height: 100vh;
-  padding: 0 20px 88px;
+  padding-bottom: 88px;
   background-color: grey;
   background-image: url(./images/header-background.jpg);
   background-repeat: no-repeat;
@@ -11,10 +11,12 @@
   background-position: 90%;
 
   @include for-tablet() {
+    padding-bottom: 130px;
     background-position: 50%;
   }
 
   @include for-desktop() {
+    padding-bottom: 203px;
     background-position: center;
   }
 
@@ -37,7 +39,7 @@
   }
 
   &__title {
-    align-self: center;
+    align-self: end;
     grid-column: 1 / 3;
     grid-row: 2 / 3;
 
